Integrated web workers to the web PoC

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Toy RT</title>
-  </head>
-  <body>
-    <canvas id="canvas" width="300" height="300"></canvas>
 
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <script src="./bundle.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Toy RT</title>
+</head>
+
+<body>
+  <div id="app"></div>
+
+  <div style="display: flex;">
+    <div>
+      <textarea id="code-area" cols="50" rows="10" spellcheck="false"></textarea>
+      <div>
+        <button id="run-btn">Run</button>
+      </div>
+    </div>
+
+    <div style="width: 100px;"></div>
+    <div>
+      <div id="worker-slider-value">Workers: 1</div>
+      <input type="range" id="worker-slider" min="1" max="8" value="1" />
+    </div>
+    <div>
+      <canvas id="canvas" width="300" height="300"></canvas>
+    </div>
+  </div>
+
+  <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+  <script src="./bundle.js"></script>
+</body>
+
 </html>
