Added an area for error reporting

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -13,6 +13,7 @@
 
       <div class="editor-container">
         <div id="editor"></div>
+        <div id="traceback"></div>
       </div>
 
       <div class="ctrl-panel">
