Now preventing rendering when workers are still booting

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -17,6 +17,7 @@
       </div>
 
       <div class="ctrl-panel">
+        <div class="loading-ctrls">Loading Workers...</div>
         <div class="ctrls">
           <button id="run-btn">Run</button>
           <div id="worker-slider-value">Workers: 8</div>
