--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Toy RT</title>
+
+  <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Fira%20Code">
 </head>
 
 <body>
