Some more styling improvements

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,8 +5,7 @@
   <meta charset="utf-8">
   <title>Toy RT</title>
 
-  <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Fira%20Code">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira%20Code">
 </head>
 
 <body>
